--- a/Desafio-1/css/home.css
+++ b/Desafio-1/css/home.css
@@ -4,16 +4,20 @@
     box-sizing: border-box;
 }
 
+.nav-content {
+    display: flex;
+    border-bottom: 1px solid gray;
+    padding: 1%;
+    justify-content: space-between;
+}
+
+#form-title {
+    text-align: center;
+}
+
 main {
     display: flex;
     justify-content: center;
-}
-
-.nav-content {  
-    display: flex;
-    border-bottom: 1px solid red;
-    padding: 1%;
-    justify-content: space-between;
 }
 
 img {
@@ -54,6 +58,7 @@ a {
 }
 
 .password {
+    padding-top: 5px;
     display: flex;
     flex-direction: column;
 }
@@ -65,6 +70,8 @@ a {
 button {
     height: 30px;
     width: 100%;
+    font-size: large;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 input {
