--- a/Desafio-1/css/blog.css
+++ b/Desafio-1/css/blog.css
@@ -43,3 +43,21 @@ a {
     background: rgba(35%, 0, 0, 0.5);
     height: 100%;
 }
+
+/* Table styling */
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
