feature: add some javascript and a little example of state management, implementing a counter

--- a/Desafio-1/views/index.html
+++ b/Desafio-1/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -15,13 +15,13 @@
             <div class="nav-content">
                 <div class="logo">
                     <a href="home.html">
-                        <img src="./logo-projeto.jpeg ">
+                        <img src="../assets/logo-projeto.jpeg">
                     </a>
                 </div>
                 <div class="navbar-text-content">
                     <ul>
                         <li>
-                            <a href="">Alguma coisa</a>
+                            <a href="./alguma-coisa.html">Alguma coisa</a>
                         </li>
                         <li>
                             <a href="">Sobre Nos</a>
