--- a/Desafio-1/views/home.html
+++ b/Desafio-1/views/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -15,7 +15,7 @@
             <div class="nav-content">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="./logo-projeto.jpeg ">
+                        <img src="../assets/logo-projeto.jpeg ">
                     </a>
                 </div>
                 <div class="navbar-text-content">
